# fmmi

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  benchmark.ods  main.cpp
include/fmmi/: fmmi.hpp  matrix.hpp
src/: CMakeLists.txt
src/fmmi/: common.hpp  dmatrix.hpp  dmatrix_fmmi.hpp  dmatrix_rec.hpp  fmmi.cpp  fmmi.hpp  matrix.hpp  smatrix.hpp  smatrix_fmmi.hpp  smatrix_rec.hpp
test/: CMakeLists.txt
test/fmmi/: common_test.cpp  dmatrix_fmmi_test.cpp  dmatrix_rec_test.cpp  dmatrix_test.cpp  fmmi_test.cpp  matrix_test.cpp  smatrix_fmmi_test.cpp  smatrix_rec_test.cpp  smatrix_test.cpp
